@@ -7120,14 +7120,14 @@ GAP-LIST must be generated by `twittering-make-gap-list'."
 		   . ,value)))
 	     retweeting-status))))
      (t
-      (flet ((assq-get (item seq)
-		       (car (cddr (assq item seq)))))
+      (let ((assq-get (lambda (item seq)
+			(car (cddr (assq item seq))))))
 	`(,@(mapcar
 	     (lambda (entry)
 	       (let* ((sym (elt entry 0))
 		      (sym-in-data (elt entry 1))
 		      (encoded (elt entry 2))
-		      (data (assq-get sym-in-data status-data)))
+		      (data (funcall assq-get sym-in-data status-data)))
 		 `(,sym . ,(if encoded
 			       (twittering-decode-entities-after-parsing-xml
 				data)
@@ -7141,14 +7141,16 @@ GAP-LIST must be generated by `twittering-make-gap-list'."
 	       (text text t)
 	       ))
 	  ;; created_at
-	  (created-at . ,(date-to-time (assq-get 'created_at status-data)))
+	  (created-at
+	   . ,(date-to-time (funcall assq-get 'created_at status-data)))
 	  ;; Replace "true" and "false" into t and nil.
 	  ,@(mapcar (lambda (sym)
-		      `(,sym . ,(string= "true" (assq-get sym status-data))))
+		      `(,sym . ,(string= "true"
+					 (funcall assq-get sym status-data))))
 		    '(favorited truncated))
 	  ;; Entities.
 	  ,(let* ((entity-data (cddr (assq 'entities status-data)))
-		  (encoded-text (assq-get 'text status-data))
+		  (encoded-text (funcall assq-get 'text status-data))
 		  (text
 		   (twittering-decode-entities-after-parsing-xml encoded-text))
 		  (gap-list (twittering-make-gap-list text)))
@@ -7230,7 +7232,7 @@ GAP-LIST must be generated by `twittering-make-gap-list'."
 			(assq 'urls entity-data))))))
 	  ;; Source.
 	  ,@(let ((source (twittering-decode-html-entities
-			   (assq-get 'source status-data))))
+			   (funcall assq-get 'source status-data))))
 	      (if (and source
 		       (string-match "<a href=\"\\(.*?\\)\".*?>\\(.*\\)</a>"
 				     source))
@@ -7247,7 +7249,7 @@ GAP-LIST must be generated by `twittering-make-gap-list'."
 		 (let* ((sym (elt entry 0))
 			(sym-in-user-data (elt entry 1))
 			(encoded (elt entry 2))
-			(value (assq-get sym-in-user-data user-data)))
+			(value (funcall assq-get sym-in-user-data user-data)))
 		   `(,sym . ,(if encoded
 				 (twittering-decode-html-entities value)
 			       value))))
@@ -7263,8 +7265,9 @@ GAP-LIST must be generated by `twittering-make-gap-list'."
 	  ,@(let ((user-data (cddr (assq 'user status-data))))
 	      (mapcar (lambda (entry)
 			`(,(car entry)
-			  . ,(string= "true"
-				      (assq-get (cdr entry) user-data))))
+			  . ,(string=
+			      "true"
+			      (funcall assq-get (cdr entry) user-data))))
 		      '((user-protected . protected))))))))))
 
 (defun twittering-xmltree-to-status (xmltree)
